syntax = "proto3";
import "common.proto";

package com.spectrum.workfolio.proto;

option java_multiple_files = true;

message CreateRecordGroupRequest {
  string title = 1;
  int64 priority = 2;
}

message CreateRecordGroupResponse {
  string id = 1;
  bool is_public = 2;
  string public_id = 3;
  string title = 4;
  int64 priority = 5;

  int64 created_at = 100;
  int64 updated_at = 101;
}
