syntax = "proto3";

import "common.proto";

package com.spectrum.workfolio.proto;

option java_multiple_files = true;
option java_package = "com.spectrum.workfolio.proto.planfeature";
option java_outer_classname = "PlanFeatureProto";

message PlanFeatureListResponse {
  repeated PlanFeature plan_features = 1;
}

message PlanFeatureGetResponse {
  PlanFeature plan_feature = 1;
}

message PlanFeatureCreateRequest {
  string plan_id = 1;
  string feature_id = 2;
  int32 limit_count = 3;
}

message PlanFeatureUpdateRequest {
  string id = 1;
  string plan_id = 2;
  string feature_id = 3;
  int32 limit_count = 4;
}

