syntax = "proto3";

import "common.proto";

package com.spectrum.workfolio.proto;

option java_multiple_files = true;
option java_package = "com.spectrum.workfolio.proto.resume";
option java_outer_classname = "ResumeProto";

message ResumeCreateRequest {
  string title = 1;
  string description = 2;
  string phone = 3;
  string email = 4;
  uint64 birth_date = 5;
  Resume.Gender gender =6;
  bool is_public = 7;
  bool is_default = 8;
}

message ResumeUpdateRequest {
  string title = 1;
  string description = 2;
  string phone = 3;
  string email = 4;
  uint64 birth_date = 5;
  Resume.Gender gender =6;
  bool is_public = 7;
  bool is_default = 8;

  string id = 99;
}

message ResumeListResponse {
  repeated Resume resumes = 1;
}

message ResumeResponse {
  Resume resume = 1;
}